2018-12-21  Andrew Sutton  <andrew.n.sutton@gmail.com>

	* constraint.cc (satisfy_check): Don't rebuild multi-level template
	arguments; we shouldn't need them after substituting through the
	check arguments.
	(satisfy_expression): Formatting.
	(evaluate_concept): Use build_concept_check instead of build_nt.
	(evaluate_function_concept): Use build_concept_check instead of
	build_nt.
	(rebuild_template_arguments): New.
	(get_normalized_constraints_from_decl): Rebuild the arguments
	when getting them from a decl; don't use the full set of instantiation
	arguments since that gives the wrong values.
	* cp-tree.h (template_parms_to_args): Declare.
	* pt.c (template_parms_to_args): Make extern.
	* parser.c (cp_parser_template_id): Remove dead case.
	* semantics.c (finish_id_expression): Move handling of concept checks
	into the main series of variable checks.

2018-12-21  Andrew Sutton  <andrew.n.sutton@gmail.com>

	Unify handling for standard, variable, and function concepts.
	* call.c (build_new_function_call): Don't evaluate concepts here.
	* constraint.cc (unpack_concept_check): Just return the template-id.
	(resolve_constraint_check): Renamed.
	(resolve_constraint_check): Renamed.
	(resolve_concept_definition_check): Removed.
	(resolve_variable_concept_check): Removed.
	(resolve_concept_check): Handle checks of overloaded function concepts.
	(deduce_constrained_parameter): Use resolve_concept_check.
	(deduce_concept_introduction): Use resolve_concept_check.
	(normalize_variable_concept_check): Removed.
	(normalize_function_concept_check): Removed.
	(normalize_concept_check): Handle concepts in a uniform way.
	(build_function_check): Do overload resolution to produce a single
	check of a single concept.
	(satisfy_check): Handle concepts uniformly.
	(evaluate_function_concept): Build a real concept check.
	(diagnose_check): Handle concepts uniformly.
	* cp-tree.h (unpack_concept_check): New.
	* pt.c (tsubst_copy_and_build): Defer checks of function concepts.